# comal

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  pyproject.toml  sam.pbtxt  test.txt
benches/: bench_mha.rs  bench_proto.rs  mat_elemadd.rs  matmul.rs
data/matadd_100/: tensor_C_mode_vals
data/matadd_1000/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_1_crd  tensor_C_mode_1_seg  tensor_C_mode_vals
data/matadd_200/: tensor_B_mode_vals
data/matadd_2000/: tensor_B_mode_1_seg  tensor_C_mode_1_seg
data/matadd_300/: tensor_B_mode_1_seg  tensor_B_mode_vals
data/matadd_3000/: tensor_B_mode_0_seg  tensor_B_mode_1_seg  tensor_C_mode_1_seg
data/matadd_4000/: tensor_B_mode_1_seg  tensor_C_mode_1_seg
data/matadd_500/: tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_vals
data/matadd_5000/: tensor_B_mode_1_seg  tensor_C_mode_0_seg  tensor_C_mode_1_seg
data/matmul_100/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_0_crd  tensor_C_mode_0_seg  tensor_C_mode_vals
data/matmul_200/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_0_crd  tensor_C_mode_0_seg  tensor_C_mode_vals
data/matmul_300/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_0_crd  tensor_C_mode_0_seg  tensor_C_mode_vals
data/matmul_400/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_0_crd  tensor_C_mode_0_seg  tensor_C_mode_vals
data/matmul_500/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_0_crd  tensor_C_mode_0_seg  tensor_C_mode_1_crd  tensor_C_mode_vals
data/sddmm_100/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_vals  tensor_D_mode_vals
data/sddmm_200/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_vals  tensor_D_mode_vals
data/sddmm_300/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_vals  tensor_D_mode_vals
data/sddmm_400/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_vals  tensor_D_mode_vals
data/sddmm_500/: tensor_B_mode_1_crd  tensor_B_mode_1_seg  tensor_B_mode_vals  tensor_C_mode_vals  tensor_D_mode_vals
data/tensor4_mha/: tensor_K_mode_shape  tensor_V_mode_3_seg
data/tensor4_mha128/: tensor_K_mode_2_seg  tensor_Q_mode_1_seg  tensor_Q_mode_2_crd  tensor_Q_mode_3_seg  tensor_V_mode_1_crd  tensor_V_mode_3_crd  tensor_V_mode_shape  tensor_V_mode_vals
src/: cli_common.rs  config.rs  lib.rs  main.rs
src/config/: joiner.rs  (+2 more)
tests/: dense_matmul.toml  matmul.toml  spmm_sd.toml  spmm_sd_relu.toml  test_dense_matmul_ijk_gcn.rs  test_fixed_multihead_attention_ijklm.rs  test_from_proto.rs  test_mat_elemadd.rs  test_matmul_ijk.rs  test_matmul_ijk_gcn.rs  test_par_matmul_ijk.rs  test_spmm_sd_ijk_gcn.rs  test_spmm_sd_ijk_relu_gcn.rs  test_tensor4_multihead_attention_ijklm.rs  test_tensor4_multipar_mha.rs  test_tensor4_par_multihead_attention_ijklm.rs  test_tensor4_seq_multihead_attention.rs  test_tensor4_softmax.rs
(+82 files in other folders)
