[package]
name = "comal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dam-rs = { git = "ssh://git@github.com/stanford-ppl/DAM-RS.git", branch = "dev" }
dam-core = { git = "ssh://git@github.com/stanford-ppl/DAM-RS.git", branch = "dev" }
dam-macros = { git = "ssh://git@github.com/stanford-ppl/DAM-RS.git", branch = "dev" }
num = "0.4.1"
serde_derive = "1.0.181"
serde = "1.0.181"
toml = "0.7.6"
home = "0.5.5"
frunk = "0.4.2"
linkme = "0.3.14"
criterion = "0.5.1"
prost = "0.11.9"
prost-types = "0.11.9"
bytes = "1.4.0"
argparse = "0.2.2"
protobuf = "3.2.0"

[build-dependencies]
prost-build = "0.11.9"

[[bench]]
name = "mat_elemadd"
harness = false
